--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,8 +25,27 @@ classifiers = [
 ]
 
 [tool.poetry.dependencies]
-python = "^3.7"
+python = "^3.8.1"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^7.2.1"
+pytest-cov = "^4.0.0"
+flake8-black = "^0.3.6"
+flake8 = "^6.0.0"
+flake8-docstrings = "^1.7.0"
+flake8-isort = "^6.0.0"
 
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
+
+[tool.black]
+line-length = 79
+
+[tool.pydocstyle]
+match_dir = '^(?!tests)[^\.].+$'
+
+[tool.pytest.ini_options]
+addopts = "-vvv --cov-report=term-missing --cov=cpf"
+testpaths = ["tests"]
+log_level = "DEBUG"
